register 및 신청 기간 제한 구현
